--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,37 @@
+@import url('https://fonts.googleapis.com/css2?family=Jersey+15&display=swap');
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body{
+  width: 100vw;
+  min-height: 100vh;
+  display: grid;
+  place-items: center;
+  background-color: #0A2647;
+  background-image:  linear-gradient(90deg, rgba(1,6,20,1) 0%, rgba(66,97,149,1) 100%);
+  font-family: "Jersey 15", sans-serif;
+  font-weight: 300;
+  font-style: normal;
+  word-spacing: 0.5em;
+  text-transform: uppercase;
+  letter-spacing:0.15em;
+  color:white;
+}
+
 .App {
+  width:1000px;
+  min-height:600px;
+  padding: 20px;
   text-align: center;
+}
+
+.icons{
+  width: 80px;
+  margin: 10px 0;
 }
 
 .App-logo {
