--- a/src/components/Playground/Playground.css
+++ b/src/components/Playground/Playground.css
@@ -1,11 +1,12 @@
 .play-ground{
     display: grid;
     grid-template-columns: 2fr 1fr 2fr;
-    grid-template-rows: 3fr 1fr;
+    grid-template-rows: repeat(5, 1fr);
     border: 2px solid black;
     background: rgba(255, 255, 255, 0.257);
     border-radius: 10px;
     padding: 1em;
+    
 
 }
 
