--- a/src/components/User/User.css
+++ b/src/components/User/User.css
@@ -1,6 +1,6 @@
 .user-card{
     border: 1px solid black;
-    grid-column:1/ span 2;
-    grid-row: 1/2;
+    grid-column:1/ 2;
+    grid-row: 1/ span 3;
 
 }
