--- a/src/components/Round/Round.css
+++ b/src/components/Round/Round.css
@@ -1,5 +1,7 @@
 .round{
     border:1px solid black;
-    grid-column:2/ 3;
-    grid-row: 1/span 1;
+    border-radius: 5px;
+    text-align: center;
+    margin:10px 10px;
+    background-color: rgba(255,255,255,0.5);
 }
