--- a/src/components/User/User.css
+++ b/src/components/User/User.css
@@ -1,6 +1,37 @@
 .user-card{
-    border: 1px solid black;
-    grid-column:1/ 2;
-    grid-row: 1/ span 3;
+    height: 220px;
+    padding: 25px 0;
+    background-color: rgba(255,255,255,0.5);
+    margin-bottom: 15px;
+    border-radius: 10px;
+    display:flex;
+    flex-direction:column;
+    justify-content: center; /* Centrar verticalmente */
+    align-items: center;
 
+}
+.user-card h2, .user-card h3{
+    text-align:center;
+    margin:0 0 10px 0;
+}
+.choice-grid{
+    display:grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    place-items:center;
+
+
+}
+.win-user-trophy{
+    display:flex;
+
+
+}
+img.choice-icon{
+   margin-right: 1.5em;
+
+}
+.img-icon{
+    display:flex;
+    justify-content: center;
+    align-items: center;
 }
