react-loader-spinner added + styles changed

--- a/src/components/User/User.css
+++ b/src/components/User/User.css
@@ -18,6 +18,7 @@
     display:grid;
     grid-template-columns: 1fr 1fr 1fr;
     place-items:center;
+    gap: 1.5em;
 
 
 }
@@ -26,10 +27,7 @@
 
 
 }
-img.choice-icon{
-   margin-right: 1.5em;
 
-}
 .img-icon{
     display:flex;
     justify-content: center;
