--- a/src/components/Computer/Computer.css
+++ b/src/components/Computer/Computer.css
@@ -18,4 +18,16 @@
 .wait-msg{
         text-align: center;
 }
+/* .img-container{
+        display:flex;
+        flex-direction: column;
+        
+} */
+
+.img-icon{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+}
+
 
