--- a/src/components/Computer/Computer.css
+++ b/src/components/Computer/Computer.css
@@ -19,16 +19,15 @@
         text-align: center;
         margin-top: 20px;
 }
-/* .img-container{
-        display:flex;
-        flex-direction: column;
+ .img-container{
+        display:grid;
+        
         
 } */
 
 .img-icon{
-        display: flex;
-        justify-content: center;
-        align-items: center;
+        display: grid;
+        
 }
 
 
