--- a/src/App.css
+++ b/src/App.css
@@ -37,3 +37,13 @@ h1{
   width: 80px;
   margin: 10px 0;
 }
+
+.theme-dark{
+  background-color:  #0A2647;;
+  color: #ffffff;
+}
+
+.theme-light{
+  background-color: #faf8f8;
+  color:#0A2647;
+}
