changes styles in header component

--- a/src/components/LanguagesComponent/LanguagesComponent.css
+++ b/src/components/LanguagesComponent/LanguagesComponent.css
@@ -1,10 +1,5 @@
-.select-flag{
-    height: auto;
-    width:auto;
-    padding: 0.2em;
-}
-.img-flags {
-    height: 150px;
-    width:150px;
+.select{
+    width:50px;
+    
 }
 
