--- a/src/components/Computer/Computer.css
+++ b/src/components/Computer/Computer.css
@@ -1,7 +1,7 @@
 .computer-card{
         height: 220px;
         padding: 25px 0;
-        background-color: rgba(255,255,255,0.5);
+        background-color: #ffffff80;
         margin-bottom: 15px;
         border-radius: 10px;
         display: flex;
