--- a/src/components/Message/Message.css
+++ b/src/components/Message/Message.css
@@ -1,6 +1,62 @@
+.msg-container{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
 .message{
     border:1px solid black;
     text-align:center;
     margin: 20px 0;
     font-size:2.5rem;
+}
+
+.thumbs{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    background-color: rgba(240, 248, 255, 0.472); 
+    padding:1em;
+    margin-bottom: 1em;
+    animation: thicken 5s ease-in-out 1ms;
+    
+}
+
+@keyframes thicken {
+   0% {
+    transform: scale(1);
+   }
+   10%{
+    transform: scale(1.4)
+   }
+   20% {
+    transform: scale(1.8);
+   }
+   30% {
+    transform: scale(2.2);
+   }
+   40% {
+    transform: scale(2.6);
+   }
+   50% {
+    transform: scale(3);
+   }
+   60% {
+    transform: scale(3.4);
+   }
+   70% {
+    transform: scale(3.8);
+   }
+   80% {
+    transform: scale(4.2);
+   }
+   90% {
+    transform: scale(4.6);
+   }
+   100% {
+    transform: scake(5);
+
+   }
 }
