background img toggle components

--- a/src/components/ToggleAudio/ToggleAudio.css
+++ b/src/components/ToggleAudio/ToggleAudio.css
@@ -18,10 +18,11 @@
 	position: relative;
 	background-image: 
 		linear-gradient(to right, rgba(0, 0, 0, 0.496), rgba(0, 0, 0, 0.5)), 
-		url('../../assets/img/turn-on-small.png'),
+		url('../../assets/img/sound3.png'),
 
-		linear-gradient(to left, rgba(53, 45, 45, 0.87), rgba(243, 202, 202, 0.804)), 
-        url('../../assets/img/turn-off-big.png');
+		url('../../assets/img/mute2.png'),
+		linear-gradient(to left,  rgba(0, 0, 0, 0.496), rgba(0, 0, 0, 0.5));
+        
 
 	background-size: 50% auto, 50% auto; /* Cada imagen ocupa el 50% del ancho del contenedor */
     background-repeat: no-repeat; /* Evita que las imágenes se repitan */
